# midi_filter_matrix

./: Cargo.toml  README.md
src/: jackprocess.rs  lib.rs  midi_matrix.rs  vector4b.rs
src/ui/: elements.rs
