[package]
name = "midi_filter_matrix"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "midi_filter_matrix"
path = "src/lib.rs"

[dependencies]
jack = "0.11.4"
crossbeam-channel = "0.5.8"
bus = { version = "2.4.1" }
ringbuf = {version = "0.3.1"}
eframe = { version = "0.24.1"}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108"}
clap = { version = "4.4.16", features = ["derive"]}
